<resources>
    <string name="app_name">Punctual patient</string>
    <string name="write">Запись</string>
    <string name="profile">Профиль</string>
    <string name="getTalon">Получить талон</string>
    <string name="talon">Талон</string>
    <string-array name="typesDoctors">
        <item>Педиатор</item>
        <item>Кардиолог</item>
        <item>Травматолог</item>
        <item>Хирург</item>
    </string-array>
    <string name="more">Меню</string>
    <string name="full">Подробнее</string>
    <string name="remind">Напомнить</string>
    <string name="enter_akk">Вход в аккаунт</string>
    <string name="login">Логин:</string>
    <string name="hint_number">Номер телефона</string>
    <string name="hint_password">Пароль</string>
    <string name="code">Введите код из SMS</string>
    <string name="find_cod">Получить код</string>
    <string name="enter">Вход</string>
    <string name="enter_in_account">Войти</string>
    <string name="ready">Готово</string>
    <string name="confirmation">Подтверждение</string>
    <string name="sms">SMS код</string>
    <string name="send">Отправить</string>
    <string name="create">Создать аккаунт</string>
    <string name="register">Регистрация</string>
    <string name="remember">Запомнить</string>

    <string name="name">Имя</string>
    <string name="second_name">Отчество</string>
    <string name="fam">Фамилия</string>
    <string name="birthday">Дата рождения</string>

    <string name="next">Далее</string>
    <string name="addition">Дополнительная информация</string>
    <string name="address">Адрес</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="mail">Почта</string>
    <string name="number">Номер</string>

    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
</resources>