...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:textSize="22sp"
        android:theme="@style/TextStyle"
        android:id="@+id/text_register" />

    <EditText
        android:inputType="phone"
        android:textColor="@color/tx_grey"
        android:background="@drawable/grey_round"
        android:layout_width="match_parent"
...
