<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/item_one"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_finish_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/addition"
        android:theme="@style/TextStyle"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:inputType="textPersonName"
        android:textColor="@color/tx_grey"
        android:background="@drawable/grey_round"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/name"
        android:id="@+id/name"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/black_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_finish_register" />

    <EditText
        android:inputType="textPersonName"
        android:textColor="@color/tx_grey"
        android:background="@drawable/grey_round"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/fam"
        android:id="@+id/fam"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/black_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:inputType="textPersonName"
        android:textColor="@color/tx_grey"
        android:background="@drawable/grey_round"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/second_name"
        android:hint="@string/second_name"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/black_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fam" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/grey_round"
        android:hint="@string/birthday"
        android:inputType="date"
        android:textColor="@color/tx_grey"
        android:textColorHint="@color/black_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_name" />

    <EditText
        android:inputType="textPersonName"
        android:textColor="@color/tx_grey"
        android:background="@drawable/grey_round"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/address"
        android:id="@+id/address_reg"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/black_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <RadioGroup
        android:orientation="horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/address_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_height="match_parent">
            <RadioButton
                android:text="@string/male"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />

            <RadioButton
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/female"
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RadioGroup>
    <Button
        android:id="@+id/next_reg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/but_selector"
        android:text="@string/ready"
        android:textColor="@color/tx_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>